--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
   },
   "dependencies": {
     "@jupyterlab/application": "^2.0.0 || ^3.0.0",
-    "@jupyterlab/apputils": "^2.0.0 || ^3.0.0"
+    "@jupyterlab/apputils": "^2.0.0 || ^3.0.0",
+    "@jupyterlab/translation": "^3.0.0"
   },
   "devDependencies": {
     "@jupyterlab/builder": "^3.0.0-rc.13",
